feat: :sparkles: Agregado los Menus y su respectiva interaccion (Usuario y Administrador) (Quedaria hacer el FRONTEND)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "MysqlConnection": "server=localhost;database=proyecto_cs;user=root;password=BRAYDEN714bRayden714;"
+        "MysqlConnection": "server=localhost;database=proyecto_cs;user=campus2023;password=campus2023;"
     }
 }
