--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
-        "MysqlConnection": "server=localhost;database=proyecto_cs;user=campus2023;password=campus2023;"
+    "MysqlServer": "server=localhost;user=campus2023;password=campus2023;",
+    "MysqlDatabase": "server=localhost;database=proyecto_cs;user=campus2023;password=campus2023;"
     }
 }
