--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-    "MysqlServer": "server=localhost;user=root;password=BRAYDEN714bRayden714;",
-    "MysqlDatabase": "server=localhost;database=proyecto_cs;user=root;password=BRAYDEN714bRayden714;"
+    "MysqlServer": "server=localhost;user=campus2023;password=campus2023;",
+    "MysqlDatabase": "server=localhost;database=proyecto_cs;user=campus2023;password=campus2023;"
     }
 }
 
